--- a/LR2/LR2.csproj
+++ b/LR2/LR2.csproj
@@ -38,12 +38,15 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Calculator.cs" />
         <Compile Include="enums\ClearBufferMask.cs" />
         <Compile Include="enums\GlPrimitiveType.cs" />
         <Compile Include="libs\Gl.cs" />
         <Compile Include="libs\Glut.cs" />
+        <Compile Include="Matrices.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="SourceData.cs" />
     </ItemGroup>
     <ItemGroup>
       <None Include="App.config" />
