--- a/LR3/LR3.csproj
+++ b/LR3/LR3.csproj
@@ -38,19 +38,20 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Cube.cs" />
         <Compile Include="enums\Axis.cs" />
         <Compile Include="enums\ClearBufferMask.cs" />
         <Compile Include="enums\EnableCap.cs" />
         <Compile Include="enums\GlPrimitiveType.cs" />
         <Compile Include="enums\MaterialFace.cs" />
         <Compile Include="enums\PolygonMode.cs" />
+        <Compile Include="Figures\Cube.cs" />
+        <Compile Include="Figures\Figure.cs" />
+        <Compile Include="Figures\Pyramid.cs" />
+        <Compile Include="Figures\Side.cs" />
         <Compile Include="libs\Gl.cs" />
         <Compile Include="libs\Glut.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="Pyramid.cs" />
-        <Compile Include="Side.cs" />
     </ItemGroup>
     <ItemGroup>
       <Content Include="freeglut.dll">
